app primefaces lista

--- a/primefaces/src/main/webapp/WEB-INF/menu.xhtml
+++ b/primefaces/src/main/webapp/WEB-INF/menu.xhtml
@@ -1,5 +1,11 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui">
 
-
+  <div class="layout-sidebar">
+    <p:megaMenu orientation="vertical" style="margin-top:20px">
+      <p:menuitem value="Tabla Cars" url="/index.xhtml" icon="fa fa-table" />
+      <p:menuitem value="Tabla Rink y Morty" url="/tRickyMorty.xhtml" icon="fa fa-table" />
+      <p:menuitem value="Test Groovy" url="/execGroovy.xhtml" icon="fa fa-cogs" />
+    </p:megaMenu>
+  </div>
 </ui:composition>
