--- a/primefaces/src/main/webapp/error.xhtml
+++ b/primefaces/src/main/webapp/error.xhtml
@@ -5,7 +5,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 template="/WEB-INF/template.xhtml">
 
-    <ui:define name="content">
+    <ui:define name="implementation">
         <div class="layout-error">
             <div class="layout-error-message-box">
                 <span class="layout-error-name">Error Occured</span>
